fix stick issue on small screen

--- a/src/scss/checkoutpage.scss
+++ b/src/scss/checkoutpage.scss
@@ -31,3 +31,24 @@
     }
 
 }
+
+
+//To fix sticky issue on small screen size
+//-----------------------------------------
+@media screen and (max-width: 991px) {
+
+    .checkout-page{
+
+        .stick-to-content{
+            position: static !important;
+            top: 0 !important;
+            left: 0 !important;
+        }
+
+        .stick-holder > div > div{
+            padding-bottom: 0 !important;
+        }
+
+    }
+
+}
